--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ install:
   - pip install -v .
 script:
   - nosetests tests
-  - asv continuous $(if [ "$TRAVIS_PULL_REQUEST" == "true" ]; then echo $TRAVIS_BRANCH; fi) $(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - asv continuous $TRAVIS_COMMIT
