--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+language: python
 python:
   - "2.7"
   - "3.4"
@@ -23,4 +24,5 @@ install:
   - pip install -v .
 script:
   - nosetests tests
+  - echo $TRAVIS_COMMIT
   - asv continuous $TRAVIS_COMMIT
